# linkedin-crawler

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
notebooks/: analysis.ipynb
src/crawler/: linkedin_crawler.py
src/database/: mongodb_handler.py
src/models/: post.py  settings.py
src/queue/: queue_handler.py
src/utils/: exceptions.py  helpers.py
