[tool.poetry]
name = "linkedin-crawler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.2"
selenium = "^4.25.0"
aio-pika = "^9.4.3"
motor = "^3.6.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
